--- a/example/requirements.txt
+++ b/example/requirements.txt
@@ -1,3 +1,6 @@
-otree>=5.2.0
+# oTree-may-overwrite-this-file
+# IF YOU MODIFY THIS FILE, remove these comments. 
+# otherwise, oTree will automatically overwrite it.
+otree>=5.2.8
 psycopg2>=2.8.4
 sentry-sdk>=0.7.9
