--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,7 +1,7 @@
-name: GitHub Actions Demo
+name: Misc GitHub Actions
 on: [push]
 jobs:
-  Explore-GitHub-Actions:
+  Lint:
     runs-on: ubuntu-latest
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
@@ -11,7 +11,27 @@ jobs:
         uses: actions/checkout@v2
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
+      - name: Installing pre-commit checks
         run: |
-          ls ${{ github.workspace }}
+          pip install pre-commit
+      - name: Running pre-commit checks
+        run: |
+          pre-commit run -a
+      - run: echo "🍏 This job's status is ${{ job.status }}."
+  Test:
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+      - name: Check out repository code
+        uses: actions/checkout@v2
+      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
+      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
+      - name: Installing oTree checks
+        run: |
+          pip install otree
+      - name: Running oTree test
+        run: |
+          otree test
       - run: echo "🍏 This job's status is ${{ job.status }}."
