--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -4,34 +4,28 @@ jobs:
   Lint:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
+      - name: 🚚 Check out repository code
         uses: actions/checkout@v2
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: Installing pre-commit checks
+      - name: 📦 Installing pre-commit checks
         run: |
           pip install pre-commit
-      - name: Running pre-commit checks
+      - name: 🔎 Running pre-commit checks
         run: |
+          echo "Triggered by a ${{ github.event_name }} event, running ${{ github.ref }} on ${{ runner.os }}"
           pre-commit run -a
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+          echo "Job's status is ${{ job.status }}."
   Test:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
+      - run: echo "ℹ️ Triggered by a ${{ github.event_name }} event, running ${{ github.ref }} on ${{ runner.os }}"
+      - name: 🚚 Check out repository code
         uses: actions/checkout@v2
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: Installing oTree checks
+      - name: 📦 Install oTree dependencies
         run: |
-          pip install otree
-      - name: Running oTree test
+          python -m pip install --upgrade pip
+          python -m pip install -r requirements.txt
+      - name: 🔎 Running oTree test
         run: |
+          echo "Triggered by a ${{ github.event_name }} event, running ${{ github.ref }} on ${{ runner.os }}"
           otree test
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+          echo "Job's status is ${{ job.status }}."
