GitHub actions: pre-commit install --install-hooks
This should then download flake8 etc under the installation step, rather then when actually running pre-commit checks.

i.e. Will more accurately reflect the time usage, and highlight if we need caching

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -9,6 +9,7 @@ jobs:
       - name: 📦 Installing pre-commit checks
         run: |
           pip install pre-commit
+          pre-commit install --install-hooks
       - name: 🔎 Running pre-commit checks
         run: |
           echo "Triggered by a ${{ github.event_name }} event, running ${{ github.ref }} on ${{ runner.os }}"
