--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,10 +3,15 @@ repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v3.4.0
     hooks:
-    -   id: check-yaml
+    -   id: check-added-large-files
+    -   id: check-case-conflict
     -   id: check-executables-have-shebangs
+    -   id: check-merge-conflict
     -   id: check-json
+    -   id: check-symlinks
+    -   id: check-yaml
     -   id: debug-statements
+    -   id: destroyed-symlinks
     -   id: mixed-line-ending
     -   id: trailing-whitespace
         files: \.(sh|rst|yml|yaml)$
