--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,7 +35,7 @@ repos:
             'flake8-implicit-str-concat',
          ]
 -   repo: https://github.com/myint/rstcheck
-    rev: 3f92957478422df87bd730abde66f089cc1ee19b
+    rev: v3.4.0
     hooks:
     -   id: rstcheck
         args: [
