--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -41,3 +41,10 @@ repos:
         args: [
             --report-level=warning,
         ]
+ci:
+    # Settings for the https://pre-commit.ci/ continuous integration service
+    autofix_prs: true
+    # Default message is more verbose
+    autoupdate_commit_msg: '[pre-commit.ci] autoupdate'
+    # Default is weekly
+    autoupdate_schedule: quarterly
